--- a/kickstart-建置/ESXi_8.0U2.cfg
+++ b/kickstart-建置/ESXi_8.0U2.cfg
@@ -25,7 +25,7 @@ vim-cmd hostsvc/enable_esx_shell
 vim-cmd hostsvc/start_esx_shell
 
 ## License Key
-vim-cmd vimsvc/license --set 4V492-44210-48830-931GK-2PRJ4
+vim-cmd vimsvc/license --set XXXXX-XXXXX-XXXXX-XXXXX-XXXXX
 
 ## IP Configure
 CURRENT_IP=$(esxcli network ip interface ipv4 get | grep vmk0 | awk '{print $2}')
@@ -56,8 +56,8 @@ esxcli system settings advanced set -o /UserVars/SuppressShellWarning -i 1
 #esxcli system syslog config set --loghost='udp://IP:514'
 #esxcli system syslog reload
 
-## NTP Server
-esxcli system ntp set --server=10.31.33.11 --server=10.31.33.12
+## NTP two Server
+esxcli system ntp set --server=<IP> --server=<IP>
 esxcli system ntp set --enabled=yes
 
 ## Power Type
@@ -79,17 +79,16 @@ esxcli network vswitch standard policy failover set -v 'vSwitch0' -l 'mac' -a 'v
 esxcli network vswitch standard portgroup add -v 'vSwitch0' -p 'vLan3134_10.31.34'
 esxcli network vswitch standard portgroup set -p 'vLan3134_10.31.34' -v '3134'
 ## vSwitch1 配置
-esxcli network vswitch standard add -v 'vSwitch1'
-esxcli network vswitch standard uplink add -v 'vSwitch1' -u 'vmnic2'
-esxcli network vswitch standard uplink add -v 'vSwitch1' -u 'vmnic4'
-esxcli network vswitch standard policy failover set -v 'vSwitch1' -l 'mac' -a 'vmnic2,vmnic4'
+#esxcli network vswitch standard add -v 'vSwitch1'
+#esxcli network vswitch standard uplink add -v 'vSwitch1' -u 'vmnic2'
+#esxcli network vswitch standard uplink add -v 'vSwitch1' -u 'vmnic4'
+#esxcli network vswitch standard policy failover set -v 'vSwitch1' -l 'mac' -a 'vmnic2,vmnic4'
 ## vSwitch2 配置
-esxcli network vswitch standard add -v 'vSwitch2'
-esxcli network vswitch standard uplink add -v 'vSwitch2' -u 'vmnic3'
-esxcli network vswitch standard uplink add -v 'vSwitch2' -u 'vmnic6'
-esxcli network vswitch standard policy failover set -v 'vSwitch2' -l 'mac' -a 'vmnic3,vmnic6'
-## LLDP開啟
-# 待補 NFS max 
+#esxcli network vswitch standard add -v 'vSwitch2'
+#esxcli network vswitch standard uplink add -v 'vSwitch2' -u 'vmnic3'
+#esxcli network vswitch standard uplink add -v 'vSwitch2' -u 'vmnic6'
+#esxcli network vswitch standard policy failover set -v 'vSwitch2' -l 'mac' -a 'vmnic3,vmnic6'
+
 ## LLDP開啟
 port_ids=$(vsish -e ls /net/portsets/vSwitch0/ports/ | sed 's/\///g')
 for port_id in $port_ids; do
